--- a/templates/result.html
+++ b/templates/result.html
@@ -75,12 +75,12 @@
                                     </div>
                                 </div>
 
-                                <div class="container" style="font: 80px Playball, sans-serif;margin-top: 20px;">
+                                <div class="container" style="font: 80px Inter, sans-serif;margin-top: 20px;">
                                     <div class="card"
                                         style="width: 500px; border: 2px solid #5ca5d3; border-radius: 8px; margin: 20px;">
                                         <div class="card-body">
                                             <h5 class="card-title"
-                                                style="color: #5ca5d3; font-size: 20px; margin-bottom: 10px;">Input Data
+                                                style="color: #5ca5d3; font: Playball, sans-serif; font-size: 20px; margin-bottom: 10px;">Input Data
                                             </h5>
                                             <p class="card-text" style="color: rgba(37, 37, 37, 0.8); font-size: 14px;">Area: {{input_data[0]}}</p>
                                             <p class="card-text" style="color: rgba(37, 37, 37, 0.8); font-size: 14px;">Number of Rooms: {{input_data[1]}}</p>
@@ -99,7 +99,7 @@
                                             <p class="card-text" style="color: rgba(37, 37, 37, 0.8); font-size: 14px;">Storage Room: {{input_data[14]}}</p>
                                             <p class="card-text" style="color: rgba(37, 37, 37, 0.8); font-size: 14px;">Guest Room: {{input_data[15]}}</p>
                                             <h5 class="card-title"
-                                                style="color: #5ca5d3; font-size: 20px; margin-top: 20px;">Predicted Price
+                                                style="color: #5ca5d3; font: Playball, sans-serif; font-size: 20px; margin-top: 20px;">Predicted Price
                                             </h5>
                                             <p class="card-text"
                                                 style="color: rgba(37, 37, 37, 0.8); font-size: 20px; font-weight: bold;">$ {{prediction_text}}</p>
